--- a/portfolio/src/components/layout.css
+++ b/portfolio/src/components/layout.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
 
 body {
-  font-family: 'Montserrat', sans-serif;
-  background-color: #F2F3F4;
+  font-family: "Montserrat", sans-serif;
+  background-color: #f2f3f4;
 }
 
 html,
@@ -12,4 +12,10 @@ body {
 
 p {
   font-size: 16px;
+}
+
+main {
+  width: 70%;
+  max-width: 1100px;
+  margin: 100px auto;
 }
