--- a/src/components/CardProjeto/cardProjeto.css
+++ b/src/components/CardProjeto/cardProjeto.css
@@ -1,3 +1,6 @@
-li {
-  list-style-type: none;
+#cardProjeto ul li {
+  background: #fff;
+  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.02);
+  border-radius: 2px;
+  padding: 20px;
 }
