social icons adjustment and change intro text

--- a/src/components/ContactInfo/contactInfo.css
+++ b/src/components/ContactInfo/contactInfo.css
@@ -23,6 +23,11 @@
   margin-top: 20px;
 }
 
+.blockInfo a + a {
+  margin-left: 10px;
+}
+
 .socialIcon {
-  color: red;
+  font-size: 25px;
+  color: #000;
 }
